--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,16 @@
+<app-nav-bar></app-nav-bar>
 <div class="container">
   <router-outlet></router-outlet>
 </div>
+<footer>
+  <div class="text">
+    <h3>Made by Shritan Gunday with:</h3>    
+  </div>
+  <div class="images">
+    <img src="assets/ng.png" alt="angular-logo" class="ng">
+    <img src="assets/html5.png" alt="html5-logo" class="html">
+    <img src="assets/css.png" alt="css-logo" class="css">
+    <img src="assets/ts.png" alt="typescript-logo" class="ts">
+    <img src="assets/jq.png" alt="jquery-logo" class="jq">
+  </div>
+</footer>
