--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,7 +1,5 @@
 .backdrop{
     background-color: rgb(75, 75, 75);
-    width: 100%;
-    height: 100%;
 }
 
 .picture{
@@ -10,20 +8,29 @@
     height: 500px;
     left: 50px;
     top: 50px;
+    border-style: solid;
+    border-color: rgb(0, 0, 0);
 }
 
 .summary{
     color: rgb(255, 255, 255);
     position: relative;
     top: 60px;
-    left: 65px;
+    left: 80px;
     width: 430px;
 }
 
 .resume{
-    position: relative;
+    position: absolute;
     width: 460px;
     height: 595px;
-    left: 550px;
-    bottom: 543px;
+    left: 580px;
+    bottom: 88px;
+    border-style: solid;
+    border-color: rgb(0, 0, 0);
+}
+
+.dummy{
+    color: rgb(75, 75, 75);
+    font-size: 18px;
 }
