--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,10 @@
-<app-nav-bar></app-nav-bar>
 <div class="backdrop">
+  <div>
     <img src="assets/portrait.png" alt="Self Portrait" class="picture">
-    <div class="summary">
-      <p>Hello! My name is Shritan Gunday. Thanks for visiting my website! I am currently a sophomore at The Ohio State University studying Computer Science and Engineering.</p>
-    </div>
-    <iframe src="assets/Gunday_Shritan_Resume_6_23_23.pdf" title="Resume" class="resume"></iframe>
-    <app-nav-links></app-nav-links>
   </div>
+  <div class="summary">
+    <p>Hello! My name is Shritan Gunday. Thanks for visiting my website! I am currently a sophomore at The Ohio State University studying Computer Science and Engineering.</p>
+  </div>
+    <iframe src="assets/Gunday_Shritan_Resume_6_23_23.pdf" title="Resume" class="resume"></iframe>
+  <app-nav-links></app-nav-links>
+</div>
