--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -3,40 +3,94 @@
     color: rgb(255, 255, 255);
     font-size: 20px;
     font-weight: 500;
-  }
+}
 
-  .mat-button{
-     color: rgb(255, 255, 255);
-  }
+.mat-button{
+    color: rgb(255, 255, 255);
+}
 
-  .name {
-    color:rgb(255, 255, 255);
-  }
+.box{
+  position: absolute;
+  background-color: white;
+  color: white;
+  height: 45px;
+  width: 55px;
+  top: 53px;
+  right: 88px;
+  border-radius: 100000px;
+}
 
-  .spacer{
-    flex: 1 1 auto;
-    height: 100px;
-  }
+.name {
+  position: relative;
+  color:rgb(255, 255, 255);
+  text-decoration: none;
+  top: 23px;
+  font-size: 80px;
+  cursor: pointer;
+}
 
-  .outlooklogo{
-    height: 50px;
-    width: 50px;
-    position: relative;
-    top: 2px;
-  }
+.spacer{
+  flex: 1 1 auto;
+  height: 100px;
+}
 
-  .githublogo{
-    height: 50px;
-    width: 50px;
-    position: relative;
-    top: 1px;
-    right: 24px;
-  }
+.outlooklogo{
+  height: 50px;
+  width: 50px;
+  position: absolute;
+  top: 49px;
+  right: 10px;
+}
 
-  .linkedinlogo{
-    height: 80px;
-    width: 80px;
-    position: relative;
-    top: 3px;
-    right: 35px;
-  }
+.githublogo{
+  height: 55px;
+  width: 57px;
+  position: absolute;
+  top: 45px;
+  right: 87px;
+}
+
+.linkedinlogo{
+  height: 50px;
+  width: 50px;
+  position: absolute;
+  top: 50px;
+  right: 170px;
+}
+
+.pipe1{
+  position: absolute;
+  -webkit-transform:rotate(90deg);
+  -moz-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  -o-transform: rotate(90deg);
+  transform: rotate(90deg);
+  bottom: 714px;
+  left: 600px;
+  width: 70px;
+}
+
+.pipe2{
+  position: absolute;
+  -webkit-transform:rotate(270deg);
+  -moz-transform: rotate(270deg);
+  -ms-transform: rotate(270deg);
+  -o-transform: rotate(270deg);
+  transform: rotate(270deg);
+  bottom: 714px;
+  left: 1120px;
+  width: 70px;
+}
+
+.mario{
+  position: relative;
+  right: 745px;
+  height: 80px;
+  top: 15px;
+  animation: mymove 4s infinite;
+}
+
+@keyframes mymove {
+  from {right: 740px;}
+  to {right: 235px;}
+}
