--- a/src/app/nav-links/nav-links.component.css
+++ b/src/app/nav-links/nav-links.component.css
@@ -1,41 +1,36 @@
-.coursework {
+.buttons {
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+    height: 589px;
     position: relative;
-    background-color: rgb(0, 0, 0);
-    color:rgb(255, 255, 255);
-    width: 1px;
-    bottom: 1100px;
-    left:1110px;
-    font-size: 36px;
+    left: 1130px;
+    bottom: 543px;
+    justify-content: space-evenly;
 }
 
-.projects {
-    position: relative;
-    background-color: rgb(0, 0, 0);
-    color:rgb(255, 255, 255);
-    width: 1px;
-    bottom: 1040px;
-    left: 1110px;
+.coursework {
     font-size: 36px;
+    border-style: solid;
+    border-color: coral;
+    cursor: pointer;
+    border-radius: 5px;
 }
 
 .research {
-    position: relative;
-    background-color: rgb(0, 0, 0);
-    color:rgb(11, 2, 2);
-    width: 1px;
-    bottom: 970px;
-    left: 1110px;
     font-size: 36px;
+    border-style: solid;
+    border-color: coral;
+    cursor: pointer;
+    border-radius: 5px;
 }
 
 .club {
-    position: relative;
-    background-color: rgb(0, 0, 0);
-    color:rgb(255, 255, 255);
-    width: 1px;
-    bottom: 900px;
-    left: 1110px;
     font-size: 36px;
+    border-style: solid;
+    border-color: coral;
+    cursor: pointer;
+    border-radius: 5px;
 }
 
 a:link, a:visited {
