--- a/src/app/nav-links/nav-links.component.html
+++ b/src/app/nav-links/nav-links.component.html
@@ -1,12 +1,11 @@
-<div class="coursework">
-    <a routerLink="/coursework">Coursework</a>
-</div>
-<div class="projects">
-    <a routerLink="/projects">Projects</a>
-</div>
-<div class="research">
-    <a href="https://the-aspire-group.github.io" target="_blank">The ASPIRE Group</a>
-</div>
-<div class="club">
-    <a href="https://hack.osu.edu" target="_blank">OHI/O</a>
-</div>
+  <div class="buttons">
+    <div class="coursework">
+        <a routerLink="/coursework">Coursework</a>
+    </div>
+    <div class="research">
+        <a href="https://the-aspire-group.github.io" target="_blank">The ASPIRE Group</a>
+    </div>
+    <div class="club">
+        <a href="https://hack.osu.edu" target="_blank">OHI/O</a>
+    </div>
+</div>  
